--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -2,11 +2,13 @@
     max-width: 1100px;
     margin: 0 auto;
     padding: 20px 0;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    .catalogoContainer h2{
-      text-transform: uppercase;
-      font-size: 26px;
-      margin: 10px 0;
-    }
+    .container-titulo{
+      justify-content: center;
+      text-align: center;
+      display: inline; 
+  }
 }
