--- a/src/components/ItemListContainer/ItemListContainer.scss
+++ b/src/components/ItemListContainer/ItemListContainer.scss
@@ -1,5 +1,5 @@
 .catalogoContainer{
-    max-width: 1100px;
+    background-color: #F5F5F5;
     margin: 0 auto;
     padding: 20px 0;
     display: flex;
