--- a/src/components/ItemCard/ItemCard.scss
+++ b/src/components/ItemCard/ItemCard.scss
@@ -1,5 +1,9 @@
 .itemCard{
-    padding: 15px;
+    padding: 10px;
+    margin: 10px;
+      .titleCard{
+        font-size: 1rem;
+      }
       .textCard{
         font-size: 0.9rem;
       }
