--- a/src/components/ItemCard/ItemCard.scss
+++ b/src/components/ItemCard/ItemCard.scss
@@ -12,6 +12,10 @@
       }
       .ImgCard {
         width: 320px;
+      }
+      .AlertCard {
+        color: red;
+        font-size: 0.8rem;
     }
   }
   .itemCard:hover{
