--- a/src/components/ItemDetail/ItemDetail.scss
+++ b/src/components/ItemDetail/ItemDetail.scss
@@ -14,10 +14,7 @@
         width: 400px;
     }
 }
-.cardDetail:hover{
-    cursor: pointer;
-    box-shadow: 1px 1px 10px 0px rgba(0, 0, 0, 0.15);
-  }
+.cardDetail
   
   .container-titulo{
     text-transform: uppercase;
